--- a/Milestone 1/style/style.css
+++ b/Milestone 1/style/style.css
@@ -9,7 +9,7 @@
 }
 
 .wapp-window {
-    min-height: 680px;
+    min-height: 650px;
     background-color: white;
     position: absolute; 
     left: 0; 
@@ -17,6 +17,10 @@
     top: 20px;
     margin-left: auto; 
     margin-right: auto; 
+}
+
+.heighthund {
+    height: 100%;
 }
 
 .flex {
@@ -62,4 +66,6 @@
     width: 400px;
     border: none;
     margin: 5px 0;
+    padding: 8px;
+    font-size: 12px;
 }
