--- a/Milestone 1/style/style.css
+++ b/Milestone 1/style/style.css
@@ -23,6 +23,11 @@
     height: calc(100vh - 60px);
 }
 
+.padding-0{
+    padding-right:0;
+    padding-left:0;
+}
+
 .flex {
     display: flex;
     gap: 20px;
@@ -46,6 +51,8 @@
 
 .bg-lightblue {
     background-color: #8edafc;
+    height: 80px;
+    padding-left: 20px;
 }
 
 .chat {
@@ -61,9 +68,28 @@
     font-size: 10px;
 }
 
+.font-mid {
+    font-size: 12px;
+}
+
+.bg-bell {
+    background-color: white;
+    border-radius: 55%;
+    padding: 5px;
+}
+
+.text-under {
+    text-decoration: underline;
+    color: gray;
+}
+
 .profile-img {
     height: 50px;
     border-radius: 50%;
+}
+
+.padding-bar {
+    padding: 0 8px;
 }
 
 .message-bar {
@@ -72,4 +98,15 @@
     margin: 5px 0;
     padding: 8px;
     font-size: 12px;
+}
+
+.research-bar {
+    margin: 5px;
+    padding: 8px;
+    font-size: 12px;
+    border: 1px solid lightgray;
+}
+
+.contact-list {
+    padding: 10px;
 }
