--- a/Milestone 2/style/style.css
+++ b/Milestone 2/style/style.css
@@ -117,14 +117,21 @@
 
 .msg-sent {
     background-color: #d5f9ba;
-    margin: 10px 0;
+    margin-right: 30px;
+    margin-left: 500px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     padding: 15px;
     border-radius: 10px;
 }
 
 .msg-rec {
     background-color: white;
-    margin: 10px 0;
+    margin-right: 500px;
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 15px;
     padding: 15px;
     border-radius: 10px;
 }
